# addresslabels

./: .gitignore  Pipfile  README.md  addresseslabels.py  config  pyproject.toml  requirements.txt
doc/: sample.csv
src/: addresseslabels.py  config
